--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- barra de navegacion -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-success navbar-dark py-3">
         <div class="container">
             <a href="#" class="navbar-brand">Diseñador Gráfico Digital</a>
             
