Cambiamos el titulo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- link estilos -->
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="img/logo jh.png" type="image/x-icon">
-    <title>Final CV Jonathan Hans</title>
+    <title>Trabajo Final - CV Jonathan Hans</title>
 
 </head>
 
